# patwiki

./: .gitignore  test_optimizations.py  test_views_e2e.py
.github/workflows/: build.yml
backend/: .env.example  init_data.py  patwiki_backend.spec  requirements.txt  run.py
backend/app/: config.py  database.py  main.py
backend/app/ai/fields/: engine.py
backend/app/api/: ai.py  analytics.py  api.py  databases.py  deps.py  fields.py  imports.py  meta.py  patents.py  settings.py  sharing.py  views.py
backend/app/models/: __init__.py  ai.py  association.py  database.py  enums.py  field.py  history.py  importing.py  organization.py  patent.py  project.py  tag.py  user.py  view.py
backend/app/schemas/: schemas.py
backend/app/services/: database_service.py  field_registry.py  import_service.py  merge_service.py  patent_service.py  relation_service.py  view_service.py
docs/: 00-MVP范围与优先级.md  01-项目风险与遗漏分析.md  02-轻量化架构设计.md  03-项目结构与代码规范.md  04-专利业务模型设计.md  05-AI开发规范.md  06-开源项目参考调研报告.md  07-P0阶段-库模型与Wiki式导入设计.md  DEVELOPMENT_PROGRESS.md  README.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: index.ts
frontend/src/components/ai/: AITaskMonitor.tsx
frontend/src/components/analytics/: AgentAnalysisPage.tsx
frontend/src/components/import/: ImportHistoryPage.tsx  (+1 more)
frontend/src/lib/: api.ts
frontend/src/store/: index.ts
frontend/src/types/: index.ts
scripts/: generate_icon.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
(+11 files in other folders)
