[package]
name = "patwiki"
version = "0.1.0"
description = "PatWiki 专利数据库管理系统"
authors = ["PatWiki"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }
sysinfo = "0.32"

[features]
custom-protocol = ["tauri/custom-protocol"]
